[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/IdleFrame01.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Push Sprite.PNG" type="Texture" id=3]
[ext_resource path="res://Sprites/IdleFrame03.png" type="Texture" id=4]
[ext_resource path="res://Sprites/IdleFrame02.png" type="Texture" id=5]
[ext_resource path="res://Sprites/IdleFrame04.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "ride",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 119.0
height = 390.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 75.5, 104.75 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 72.0938, 300 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 73, 422.75 )

[node name="Player" type="AnimatedSprite"]
frames = SubResource( 1 )
animation = "ride"
frame = 3
playing = true
script = ExtResource( 2 )

[node name="CollideArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollideArea"]
position = Vector2( 63, 23 )
shape = SubResource( 2 )

[node name="StartTimer" type="Timer" parent="."]
process_mode = 0
autostart = true

[node name="PerfectHitArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerfectHitArea"]
position = Vector2( 1, -25.25 )
shape = SubResource( 3 )

[node name="GoodHitArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoodHitArea"]
position = Vector2( 0, 13 )
shape = SubResource( 4 )

[node name="OkayHitArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OkayHitArea"]
position = Vector2( 2, 2 )
shape = SubResource( 5 )

[connection signal="area_entered" from="CollideArea" to="." method="_on_CollideArea_area_entered"]
[connection signal="area_exited" from="CollideArea" to="." method="_on_CollideArea_area_exited"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="area_entered" from="PerfectHitArea" to="." method="_on_PerfectHitArea_area_entered"]
[connection signal="area_exited" from="PerfectHitArea" to="." method="_on_PerfectHitArea_area_exited"]
[connection signal="area_entered" from="GoodHitArea" to="." method="_on_GoodHitArea_area_entered"]
[connection signal="area_exited" from="GoodHitArea" to="." method="_on_GoodHitArea_area_exited"]
[connection signal="area_entered" from="OkayHitArea" to="." method="_on_OkayHitArea_area_entered"]
[connection signal="area_exited" from="OkayHitArea" to="." method="_on_OkayHitArea_area_exited"]
